# tradedash

./: .env  Dockerfile  README.md  app.py  appium_automation.py  index.html  pyproject.toml  render.yaml  requirements.txt
static/css/: custom.css
static/js/: charts.js  dashboard.js  websocket.js
