[tool.poetry]
name = "tradebot"
version = "0.1.0"
description = "A trading bot dashboard"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Flask = "2.1.1"
Flask-Cors = "3.0.10"
Flask-SocketIO = "5.2.0"
Flask-SQLAlchemy = "2.5.1"
python-dotenv = "0.19.2"
pandas = "1.3.5"
requests = "2.26.0"
gevent = "21.8.0"
gevent-websocket = "0.10.1"
numpy = "1.21.4"
appium-python-client = "2.0.0"
gunicorn = "20.1.0"
Werkzeug = "2.0.3"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
